--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600&display=swap');
+
 html, body {
   width: 100%;
   margin: 0px;
   padding: 0px;
   overflow: hidden;
+}
+
+a {
+  text-decoration: none;
 }
 
 .App {
