--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&display=swap');
 
-/* width
-max-770px
-max-610px */
 
 html, body {
   width: 100%;
@@ -14,13 +11,20 @@ html, body {
 :root {
   --darkBlue-color: #000080;
   --pink-color: #FB2E86;
+  --pinkViolet: #F5E1FC;
   --gray-color: #B7BACB;
-  --light-violet: #EEEFFB;
+  --grayBlue: #F5F6F8;
+  --light-blue: #bde0ff;
   --dark-violet: #E7E4F8;
+  --light-violet: #EEEFFB;
 }
 
 a {
   text-decoration: none;
+}
+
+h1 {
+  font-family: "Josefin Sans";
 }
 
 .App {
