Order Completed Page- Brands Page - Page Path

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ html, body {
   --light-blue: #bde0ff;
   --dark-violet: #E7E4F8;
   --light-violet: #EEEFFB;
+  --most-light-violet: #F6F5FF;
 }
 
 a {
