--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html, body {
   --dark-violet: #E7E4F8;
   --light-violet: #EEEFFB;
   --most-light-violet: #F6F5FF;
+  --grayViolet: #8A8FB9;
 }
 
 a {
