--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&display=swap');
 
+/* Manat - &#8380; */
 
 html, body {
   width: 100%;
