--- a/src/pages/ShopList/ShopList.css
+++ b/src/pages/ShopList/ShopList.css
@@ -1,9 +1,8 @@
 .ShopList {
     width: 100%;
 }
-/* FILTER */
 .list-about {
-    width: 70%;
+    width: 80%;
     margin: 5% auto;
     display: flex;
     justify-content: space-between;
@@ -11,6 +10,7 @@
 }
 
 .la-title {
+    width: 45%;
     text-align: left;
 }
 
@@ -21,6 +21,28 @@
 .la-title>p {
     color: var(--grayViolet);
 }
+
+/* views */
+.list-filter {
+    display: flex;
+    width: 30%;
+}
+.views {
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+}
+
+.views>p {
+    cursor: pointer;
+    color: var(--yellow-color);
+}
+
+/* FILTER */
+.dropdown-button {
+    width: 70%;
+}
+
 .dropdown-button>button ,
 .dropdown-button>button:active {
     background-color: transparent!important;
@@ -29,7 +51,7 @@
 }
 /* all shop list */
 .allShopList {
-    width: 70%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     margin: 5% auto 10% auto;
@@ -45,4 +67,8 @@
     width: 70%;
     display: flex;
     flex-direction: column;
+}
+
+.gridProducts {
+    width: 75%;
 }
