--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,7 +6,7 @@
 }
 
 .f-pages {
-    width: 72%;
+    width: 85%;
     display: flex;
     margin: 0 auto;
     padding: 5% 0;
@@ -14,13 +14,17 @@
 }
 
 .fp-categories {
-    width: 56%;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
 }
 
 .fp-page {
     flex: 1 1 150px;
+}
+
+.fp-page a{
+    color: var(--grayViolet);
 }
 
 .fpm-box  {
@@ -41,6 +45,7 @@
 .fpm-mailbox {
     display: flex;
     width: 100%;
+    margin: 3% 0 5% 0;
 }
 
 .fpm-mailbox>input {
@@ -171,21 +176,25 @@
 
 .f-copy {
     display: flex;
-    width: 60%;
-    padding: 0 20%;
+    width: 100%;
+    padding: 1.5% 20%;
     justify-content: space-between;
     margin: 0 auto;
     background-color: #E7E4F8;
     align-items: center;
+    text-align: center;
 }
 
 .f-copy>p {
     font-size: 12px;
     color: gray;
+    margin: 0;
 }
 
 .fc-medias>ul {
     display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 .fc-medias>ul>ol>a {
