--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 
 /* Manat - &#8380; */
 
+* {
+  scroll-behavior: smooth;
+}
+
 html, body {
   width: 100%;
   margin: 0;
@@ -14,7 +18,8 @@ html, body {
   --pink-color: #FB2E86;
   --pinkViolet: #F5E1FC;
   --light-pink: #FFE7F9;
-  --gray-color: #B7BACB;
+  --gray-color: #868686;
+  /* --gray-color: #B7BACB; */
   --grayBlue: #F5F6F8;
   --light-blue: #bde0ff;
   --dark-violet: #E7E4F8;
@@ -23,6 +28,7 @@ html, body {
   --grayViolet: #8A8FB9;
   --yellow-color:#FFA454;
   --light-yellow: #FFECE2;
+  --orange-color: #fc9d21;
 }
 
 .App a {
