--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ html, body {
   --yellow-color:#FFA454;
   --light-yellow: #FFECE2;
   --orange-color: #fc9d21;
+  --btn-color: #2F333A;
 }
 
 .App a {
