--- a/src/components/ShopListItemGrid/ShopListItemGrid.css
+++ b/src/components/ShopListItemGrid/ShopListItemGrid.css
@@ -1,5 +1,5 @@
 .ShopListItemGrid {
-  margin: 0 2% 10% 0;
+  margin: 0 2% 7% 0;
   padding: 0;
   width: 31%;
   float: left;
@@ -9,9 +9,12 @@
     visibility: visible;
 }
 
+.ShopListItemGrid:hover .slig-addingCart  {
+  visibility: visible;
+}
+
 .slig-img {
-  width: 1  00%;
-  /* width: 15vw; */
+  width: 100%;
   display: flex;
   align-items: center;
   position: relative;
@@ -27,12 +30,13 @@
   width: 15%;
   margin: 0 auto;
   position: absolute;
-  top: 15%;
-  left: 5%;
+  top: 10%;
+  left: 3%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   visibility: hidden;
+  transition: visibility 0.3s ease-in-out;
 }
 
 .slig-adding>p {
@@ -50,6 +54,44 @@
     color: var(--darkBlue-color);
 }
 
+.slig-addingCart {
+  width: 67%;
+  position: absolute;
+  bottom: 5%;
+  right: 15%;
+  cursor: pointer;
+  visibility: hidden;
+  transition: visibility 0.2s ease-in-out;
+}
+
+.slig-addingCart>button {
+  width: 100%;
+  margin: 0;
+  background-color: white;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  color: var(--darkBlue-color);
+  vertical-align: middle;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.slig-addingCart>button:hover {
+  background-color: var(--orange-color);
+  color: white;
+}
+
+.addIcon.cart {
+  width: 10%;
+  margin-right: 5%;
+  color: var(--darkBlue-color);
+}
+
+.slig-addingCart>button:hover .cart {
+  color: white;
+}
+
+/* info */
 .slig-info {
   width: 100%;
   display: flex;
