--- a/src/pages/HomePage/BestSeller.css
+++ b/src/pages/HomePage/BestSeller.css
@@ -18,6 +18,7 @@
 .bs-detail {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     font-family: 'Jost';
     font-size: 14px;
