--- a/src/pages/HomePage/NewTrendSlide.css
+++ b/src/pages/HomePage/NewTrendSlide.css
@@ -1,61 +1,161 @@
 .hNewTrendSlide {
+  width: 100%;
+  height: 35vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  position: relative;
+}
+
+.hNewTrendSlide img {
     width: 100%;
-    height: 80vh;
+    height: 100%;
+}
+
+.allSlide {
+    position: absolute;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-left: 25%;
+    padding: 3% 0 3% 25%;
 }
 
-.hNewTrendSlide>.fTitle {
-    color: var(--pink-color);
-    font-size: 14px;
-    font-family: 'Jost';
-    font-weight: 400;
+.allSlide > .fTitle {
+  color: var(--pink-color);
+  font-size: 14px;
+  font-family: "Jost";
+  font-weight: 400;
 }
 
-.hNewTrendSlide>.title {
-    color: #000;
+.allSlide > .title {
+  color: #000;
+  width: 50%;
+  font-size: 35px;
+  font-family: "Josefin Sans";
+  font-weight: 500;
+  margin: 1% 0 2% 0;
+}
+
+.contBtn {
     width: 50%;
-    font-size: 35px;
-    font-family: 'Josefin Sans'; 
-    font-weight: 500;
-    margin: 1% 0 2% 0;
+    display: flex;
+    flex-direction: column;
 }
 
-.hNewTrendSlide>.cont {
-    color: var(--gray-color);
-    font-size: 14px;
-    width: 35%;
+.contBtn > .cont {
+  color: var(--gray-color);
+  font-size: 14px;
+  width: 100%;
 }
 
-.hNewTrendSlide>a {
-    width: 15%;
+.contBtn > a {
+  width: 25%;
 }
 
-.hNewTrendSlide>a>button{
-    background-color: var(--pink-color);
-    color: #fff;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    width: 100%;
-    padding: 10% 0;
-    margin-top: 2%;
+.contBtn > a > button {
+  background-color: var(--pink-color);
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  padding: 10% 0;
+  margin-top: 2%;
 }
 
 .hSlider .owl-dots button.owl-dot.active {
-    background-color: var(--pink-color); 
+  background-color: var(--pink-color);
 }
 
-.hSlider .owl-dots button.owl-dot{
-    width: 10px; 
-    height: 10px;
-    border-radius: 50%;
-    margin-right: 1%;
-    border: 1px solid var(--pink-color);
-    background-color: white;
-} 
+.hSlider .owl-dots button.owl-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-right: 1%;
+  border: 1px solid var(--pink-color);
+  background-color: white;
+}
+
+
+@media screen and (max-width:1070px) {
+    .allSlide > .title {
+        font-size: 30px;
+    }
+    .allSlide .fTitle {
+        margin: 0;
+    }
+    .contBtn > a {
+       width: 12%;
+    }
+    .contBtn > a > button {
+        font-size: 14px;
+        padding: 10% 3%;
+    }
+}
+
+@media screen and (max-width:900px) {
+    .allSlide > .title {
+        font-size: 25px;
+    }
+    .contBtn {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 60%;
+    }
+    .cont {
+        width: 65%;
+    }
+    .contBtn a {
+        width: 30%;
+        display: flex;
+        align-items: flex-end;
+    }
+}
+
+@media screen and (max-width:760px) {
+    .allSlide .fTitle {
+        font-size: 12px;
+    }
+    .allSlide > .title {
+        font-size: 20px;
+    }
+    .contBtn {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 60%;
+    }
+    .contBtn .cont {
+        width: 70%;
+        font-size: 12px;
+    }
+    .contBtn a {
+        width: 25%;
+        align-items: center;
+    }
+    .contBtn > a > button {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .contBtn {
+        width: 80%;
+    }
+    .contBtn .cont {
+        width: 70%;
+        font-size: 12px;
+    }
+    .contBtn a {
+        width: 20%;
+    }
+    .contBtn > a > button {
+        font-size: 11px;
+    }
+}
